SF Primes/src/objects/MSR_Demos__c.object
<CustomObject>
    <fields>
        <fullName>Was_this_job_a_shadow__c</fullName>
        <label>Was this a job shadow?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_1000__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DASH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where_was_your_presentation_delivered1__c</fullName>
        <label>Where was your presentation delivered?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_was_your_presentation_delivered__c</fullName>
        <label>Where was your presentation delivered?</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote (via WebEx)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP (Executive Briefing Center)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ctWizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ctWizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ePayments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ePayments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eSign_Digital_Contracting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eSign/Digital Contracting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iDMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iDMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>webBox</label>
        <type>Checkbox</type>
    </fields>
    <label>Solution Consultant Presentation</label>
    <listViews>
        <fullName>Assigned_Remote_Demo_Requests</fullName>
        <columns>NAME</columns>
        <columns>Type_of_Demo__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Date1__c</columns>
        <columns>Time_Requested__c</columns>
        <columns>TimeZone__c</columns>
        <columns>Expected_Duration__c</columns>
        <columns>Date__c</columns>
        <columns>Product__c</columns>
        <columns>Notes_Additional_Comments__c</columns>
        <columns>Presentation_Date__c</columns>
        <columns>MSR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MSR__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date1__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned Remote Demo Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Remote_Demo_Requests</fullName>
        <columns>NAME</columns>
        <columns>Type_of_Demo__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Date1__c</columns>
        <columns>Time_Requested__c</columns>
        <columns>TimeZone__c</columns>
        <columns>Expected_Duration__c</columns>
        <columns>Date__c</columns>
        <columns>Product__c</columns>
        <columns>Notes_Additional_Comments__c</columns>
        <columns>MSR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MSR__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date1__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Remote Demo Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Demo_View_New_Requests</fullName>
        <columns>NAME</columns>
        <columns>MSR__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product__c</columns>
        <columns>Notes_Additional_Comments__c</columns>
        <columns>Date1__c</columns>
        <columns>Time_Requested__c</columns>
        <columns>TimeZone__c</columns>
        <columns>Expected_Duration__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>MSR__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date1__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Remote Demo View New Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Remote_Demo_Requests</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Region__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Remote Demo Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SCS Demo - {00000}</displayFormat>
        <label>SCS Demo #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Consultant Presentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CB_SLS_Cancelled_Reason_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(Status__c, &apos;Cancelled&apos;)
&amp;&amp;
(Cancelled_Reason__c = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Cancelled_Reason__c</errorDisplayField>
        <errorMessage>When the Status of Cancelled is Chosen, the Cancelled Reason cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_SCDemo_Need_SCS_Specified</fullName>
        <active>false</active>
        <description>Ensure SCS is entered on each demo...with Actions in SF 1 it is not required since not look at required fields on page layouts</description>
        <errorConditionFormula>ISBLANK( MSR__c )</errorConditionFormula>
        <errorDisplayField>MSR__c</errorDisplayField>
        <errorMessage>You must specify a SCS for each demo</errorMessage>
    </validationRules>
</CustomObject>